docs: update environment variables example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # WhatsApp Business API Configuration
-WHATSAPP_WEBHOOK_URL=https://graph.facebook.com/v17.0/YOUR_PHONE_NUMBER_ID/messages
+WHATSAPP_WEBHOOK_URL=your_webhook_url_here
 WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token_here
-WHATSAPP_VERIFY_TOKEN=your_webhook_verification_token
+
+# Optional: Webhook Verification Token
+WHATSAPP_VERIFY_TOKEN=your_whatsapp_verify_token_here
 
 # Gemini API Key - Get your key from https://aistudio.google.com/app/apikey
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
@@ -9,10 +11,16 @@ VITE_GEMINI_API_KEY=your_gemini_api_key_here
 # WhatsApp API Configuration for Vite
 VITE_WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token_here
 VITE_WHATSAPP_PHONE_NUMBER_ID=your_whatsapp_phone_number_id_here
-VITE_WHATSAPP_VERIFY_TOKEN=your_webhook_verification_token
+
+# Telegram Configuration
+VITE_TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
 # Server Configuration
-PORT=3001
+PORT=3000
 NODE_ENV=development
 
-# Remember to add this file to .gitignore to keep your secrets safe! 
+# Telegram Bot Configuration
+BOT_TOKEN=your_telegram_bot_token_here
+
+# Gemini API Configuration
+GEMINI_API_KEY=your_gemini_api_key_here 
